--- a/techefx-property-access-service-qa.properties
+++ b/techefx-property-access-service-qa.properties
@@ -1,3 +1,3 @@
-property-file.name=QA
-property-file.description=QA Environment !
+property-file.name=QA updated
+property-file.description=QA Environment updated!
 
